--- a/thaw_utils/Cargo.toml
+++ b/thaw_utils/Cargo.toml
@@ -20,6 +20,7 @@ wasm-bindgen = "0.2.95"
 cfg-if = "1.0.0"
 chrono = "0.4.38"
 send_wrapper = "0.6"
+reactive_stores = "0.1.0-rc1"
 
 [features]
 csr = ["leptos/csr"]
